# rust-openai-api-wrapper

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  rustfmt.toml
backend/: .env.example
backend/api/: Cargo.toml  Dockerfile  Dockerfile.dev  README.md
backend/api/src/: error.rs  lib.rs  main.rs
backend/api/src/handlers/: chat.rs  mod.rs  session.rs
backend/api/tests/: api_tests.rs
backend/cli/: Cargo.toml  README.md
backend/cli/src/: config.rs  main.rs  repl.rs  session.rs
backend/core/: Cargo.toml  README.md
backend/core/src/: error.rs  lib.rs
backend/core/src/db/: repository.rs
backend/core/src/db/migrations/: 20260111000000_initial.sql  20260111100000_add_system_prompt.sql
backend/core/src/services/: mod.rs
docs/ADR/: 0001-project-architecture.md  0002-technology-stack.md  0003-openai-model-selection.md  0004-phase2-database-plan.md  0005-error-handling-strategy.md  0006-testing-strategy.md  0007-system-prompt-strategy.md  0008-monorepo-structure.md  0009-ui-technology.md  003-monorepo-structure.md  004-ui-technology.md  README.md
src/: config.rs  error.rs  lib.rs  main.rs
src/db/: mod.rs
src/handlers/: chat.rs  health.rs  mod.rs  session.rs
src/models/: chat.rs  mod.rs  session.rs
src/services/: openai.rs
tests/: api_tests.rs
ui/: .cta.json  Dockerfile  Dockerfile.dev  package.json  pnpm-lock.yaml
ui/src/: styles.css
ui/src/components/: Header.tsx
ui/src/components/chat/: ChatInput.tsx  ChatMessage.tsx  SessionList.tsx  SystemPromptDialog.tsx  index.ts
ui/src/components/ui/: button.tsx  dialog.tsx  textarea.tsx
ui/src/lib/: api.ts
ui/src/routes/: __root.tsx  index.tsx
