[workspace]
resolver = "2"
members = [
    "backend/core",
    "backend/api",
    "backend/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# 非同期ランタイム
tokio = { version = "1", features = ["full"] }
# HTTPクライアント
reqwest = { version = "0.12", features = ["json"] }
# JSON シリアライズ/デシリアライズ
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 環境変数
dotenvy = "0.15"
# ロギング
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# エラーハンドリング
anyhow = "1"
thiserror = "2"
# データベース
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
# UUID生成
uuid = { version = "1", features = ["v4", "serde"] }
# 日時処理
chrono = { version = "0.4", features = ["serde"] }
# Webフレームワーク
axum = "0.8"

# 内部クレート
backend_core = { path = "backend/core" }
