[package]
name = "backend_core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
dotenvy.workspace = true
tracing.workspace = true
thiserror.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
